[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/tile_set.tres" type="TileSet" id=2]
[ext_resource path="res://assets/colored_transparent.png" type="Texture" id=3]
[ext_resource path="res://Character.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65547, 2, 0, 65548, -1610612735, 0, 65549, 5, 0, 131083, 1, 0, 131085, 1, 0, 196617, 5, 0, 196618, -1610612735, 0, 196619, 5, 0, 196621, 5, 0, 262153, 1, 0, 262155, 1, 0, 262157, 1, 0, 327687, 5, 0, 327688, -1610612735, 0, 327689, 5, 0, 327690, -1610612735, 0, 327691, 5, 0, 327692, -1610612735, 0, 327693, 5, 0, 393223, 1, 0, 393225, 1, 0, 458757, 2, 0, 458758, -1610612735, 0, 458759, 5, 0, 458760, -1610612735, 0, 458761, 5, 0, 524293, 1, 0, 524297, 1, 0, 589829, 5, 0, 589830, -1610612735, 0, 589831, 5, 0, 589832, -1610612735, 0, 589833, 5, 0 )

[node name="MainCharacter" type="Sprite" parent="."]
modulate = Color( 1, 0.00784314, 0.00784314, 1 )
show_behind_parent = true
position = Vector2( 12, 72 )
z_index = 1
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 408, 68, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="MainCharacter"]

[node name="RandomWalker" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 459, 68, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="RandomWalker"]

[node name="Button" type="Button" parent="."]
margin_left = 12.0
margin_top = 28.0
margin_right = 119.0
margin_bottom = 48.0
text = "Walk randomly"
[connection signal="tween_all_completed" from="MainCharacter/Tween" to="MainCharacter" method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="RandomWalker/Tween" to="RandomWalker" method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
